css/jquery.terminal.css
/*!
 *       __ _____                     ________                              __
 *      / // _  /__ __ _____ ___ __ _/__  ___/__ ___ ______ __ __  __ ___  / /
 *  __ / // // // // // _  // _// // / / // _  // _//     // //  \/ // _ \/ /
 * /  / // // // // // ___// / / // / / // ___// / / / / // // /\  // // / /__
 * \___//____ \\___//____//_/ _\_  / /_//____//_/ /_/ /_//_//_/ /_/ \__\_\___/
 *           \/              /____/                              version DEV
 * http://terminal.jcubic.pl
 *
 * This file is part of jQuery Terminal.
 *
 * Copyright (c) 2011-2019 Jakub Jankiewicz <https://jcubic.pl/me>
 * Released under the MIT license
 *
 * Date: Wed, 18 Dec 2019 08:26:09 +0000
 */
.terminal .terminal-output .format, .cmd .format,
.cmd-prompt, .cmd-prompt div {
    display: inline-block;
}
.terminal h1, .terminal h2, .terminal h3, .terminal h4, .terminal h5, .terminal h6, .terminal pre, .cmd {
    margin: 0;
}
/*
.terminal h1, .terminal h2, .terminal h3, .terminal h4, .terminal h5, .terminal h6 {
    line-height: 1.2em;
}
/*
.cmd .mask {
    width: 10px;
    height: 11px;
    background: black;
    z-index: 100;
}
*/
.cmd .cmd-clipboard {
    position: absolute;
    left: -16px;
    top: 0;
    width: 16px;
    height: 16px;
    /* this seems to work after all on Android */
    /*left: -99999px;
    clip: rect(1px,1px,1px,1px);
    /* on desktop textarea appear when paste */
    /* opacity is needed for Edge and IE
    opacity: 0.01;
    filter: alpha(opacity = 0.01);
    filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0.01);*/
    background-color: transparent;
    border: none;
    color: transparent;
    outline: none;
    padding: 0;
    resize: none;
    z-index: 1000;
    overflow: hidden;
    white-space: pre;
    text-indent: -9999em; /* better cursor hiding for Safari and IE */
    top: calc(var(--cursor-line, 0) * 1em);
}

.cmd span.cmd-end-line,
.cmd span.cmd-end-line span,
.cmd div.cmd-end-line span[data-text]:last-child,
.cmd div.cmd-end-line span[data-text]:last-child span,
.cmd .cursor + span:empty {
    -webkit-touch-callout: none; /* iOS Safari */
      -webkit-user-select: none; /* Safari */
       -khtml-user-select: none; /* Konqueror HTML */
         -moz-user-select: none; /* Firefox */
          -ms-user-select: none; /* Internet Explorer/Edge */
              user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
}
.terminal img, .terminal audio, .terminal object, .terminal canvas {
    cursor: default;
}
.terminal {
    position: relative;
    /*overflow: hidden;*/
    overflow-y: auto;
    /* overflow-x: hidden; */
}
terminal.terminal-temp {
    visibility: hidden;
}
.terminal {
    contain: content;
}
body.terminal {
    min-height: 100vh;
    height: 100%;
}
html {
    height: 100%;
}
body.terminal, body.full-screen-terminal {
    margin: 0;
    height: 100%;
}
body.full-screen-terminal .terminal {
    height: 100%;
}
.terminal > div:not(.terminal-font) {
    min-height: 100%;
    height: 100%;
}
.terminal > .terminal-resizer, .terminal > .terminal-font .terminal-resizer {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    overflow: hidden;
    pointer-events: none;
    z-index: -1;
    height: 100%;
    border: none;
    padding: 0;
    width: 100%
}
.cmd {
    padding: 0;
    position: relative;
    float: left;
    width: 100%;
}
.terminal a[tabindex="1000"],
.terminal a[tabindex="1000"]:active,
.terminal a[tabindex="1000"]:focus {
    outline: none;
}
.terminal .inverted, .cmd .inverted,
.terminal .terminal-inverted, .cmd .cmd-inverted {
    background-color: #aaa;
    color: #000;
}
.terminal .terminal-output > :not(.raw) a[href] span,
.cmd a[href] span {
    /*
     * shorter and simple solution
     * it's hard to overwrite long :not selector (:not(a span) don't work)
     */
    color: #0F60FF !important;
    color: var(--link-color, #0F60FF) !important;
    text-decoration: underline;
}
.terminal .terminal-output > :not(.raw) a[href]:hover span,
.cmd a[href]:hover span {
    background-color: #0F60FF !important;
    background-color: var(--link-color, #0F60FF) !important;
    color: var(--background, #000) !important;
    text-decoration: none;
}
.cmd .cmd-cursor {
    display: inline-block;
}
.cmd .cmd-cursor-line > span {
    display: inline-block;
}
.cmd .cmd-cursor.cmd-blink span:not(.emoji) span {
    -webkit-animation: terminal-blink 1s infinite linear;
       -moz-animation: terminal-blink 1s infinite linear;
        -ms-animation: terminal-blink 1s infinite linear;
            animation: terminal-blink 1s infinite linear;
}
.cmd .cmd-cursor .emoji {
        -webkit-animation: terminal-blink 1s infinite linear;
           -moz-animation: terminal-blink 1s infinite linear;
            -ms-animation: terminal-blink 1s infinite linear;
                animation: terminal-blink 1s infinite linear;
}
.bar.terminal .inverted, .bar.cmd .cmd-inverted {
    box-shadow: -2px 0 0 -1px #aaa;
    box-shadow: -2px 0 0 -1px var(--original-color, #aaa);
}
.terminal .terminal .terminal-output > div > div, .cmd .cmd-prompt {
    display: block;
    /*line-height: 15px;*/
    height: auto;
}
.terminal .terminal-output > div > div, .cmd div {
    min-height: 12px;
    min-height: calc(var(--size, 1) * 12px);
}
.terminal .terminal-output > div:not(.raw) div {
    white-space: nowrap;
}
.cmd .cmd-prompt > span {
    float: left;
}
.cmd span[style*="width"], .terminal span[style*="width"] {
    display: inline-block;
}
.terminal,
.terminal-output > :not(.raw) span,
.terminal-output > :not(.raw) a,
.terminal-output > :not(.raw) div,
.cmd,
.cmd span,
.cmd div {
    font-family: monospace;
    /*font-family: FreeMono, monospace; this don't work on Android */
    font-size: 12px;
    line-height: 15px;
}
/* ... */

